# tts-cli

./: Readme.md  build.sh  dependency_installer.py  main-cpu.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish_to_pypi_pages.yml
src/: base_tts_model.py  colors.py  parler_tts_model.py  utils.py
src/models/: base_tts_model.py  model_manager.py  orpheus_tts_model.py  parler_tts_model.py
